# friday

./: .gitignore  README.md  changelog  friday.cabal  repa-image.cabal
bench/: Benchmark.hs
example/: Canny.hs  Delayed.hs  GaussianBlur.hs  Histogram.hs  Otsu.hs  ResizeImage.hs  SCW.hs  Threshold.hs
src/Data/: RatioInt.hs
src/Vision/: Histogram.hs  Image.hs  Primitive.hs
src/Vision/Detector/: Edge.hs
src/Vision/Image/: Class.hs  Contour.hs  Conversion.hs  Filter.hs  Function.hs  Grey.hs  GreyImage.hs  HSV.hs  HSVImage.hs  Interpolate.hs  Mask.hs  Maskable.hs  Mutable.hs  Parallel.hs  Primitive.hs  RGB.hs  RGBA.hs  RGBAImage.hs  RGBImage.hs  Storage.hs  Storage.hsc  Threshold.hs  Transform.hs  Type.hs
src/Vision/Image/Filter/: Internal.hs
src/Vision/Image/Grey/: Conversion.hs  Specialize.hs  Type.hs
src/Vision/Image/GreyImage/: Conversion.hs  Storage.hs  Type.hs
src/Vision/Image/HSV/: Conversion.hs  Specialize.hs  Type.hs
src/Vision/Image/HSVImage/: Conversion.hs  Type.hs
src/Vision/Image/RGB/: Conversion.hs  Specialize.hs  Type.hs
src/Vision/Image/RGBA/: Conversion.hs  Specialize.hs  Type.hs
src/Vision/Image/RGBAImage/: Conversion.hs  Storage.hs  Type.hs
src/Vision/Image/RGBImage/: Conversion.hs  Storage.hs  Type.hs
src/Vision/Primitive/: Shape.hs
test/: Contour.hs  Test.hs
test/Test/: Utils.hs
test/Test/Vision/: Histogram.hs  Image.hs  Primitive.hs
