name:                   friday
--                      +-+------- breaking API changes
--                      | | +----- non-breaking API additions
--                      | | | +--- code changes with no API change
version:                0.2.3.2
synopsis:               A functional image processing library for Haskell.
homepage:               https://github.com/RaphaelJ/friday
license:                LGPL-3
license-file:           LICENSE
author:                 Raphael Javaux <raphaeljavaux[at]gmail.com>
maintainer:             Raphael Javaux <raphaeljavaux[at]gmail.com>

description:            Friday provides functions to manipulate images in a
                        functional way.
                        The library is designed to be fast, generic and
                        type-safe.
                        .
                        Images can be represented in two representations:
                        .
                        * the 'Manifest' representation stores images in Haskell
                        'Vector's ;
                        .
                        * the 'Delayed' representation uses functions to produce
                        images pixels. These images can be combined to produce
                        complex transformations. By some inlining, Haskell
                        compilers are able to produce fast algorithms by
                        removing intermediate structures.
                        .
                        The library currently support four color spaces: RGB,
                        RGBA, HSV and gray-scale images.
                        .
                        Please read our
                        <https://github.com/RaphaelJ/friday/blob/master/README.md README>
                        to get a detailed usage and some examples.

category:               Graphics
stability:              Experimental
build-type:             Simple
cabal-version:          >= 1.10

extra-source-files:     changelog

source-repository       head
    type:               git
    location:           https://github.com/RaphaelJ/friday

library
    exposed-modules:    Vision.Detector.Edge
                        Vision.Histogram
                        Vision.Image
                        Vision.Image.Class
                        Vision.Image.Conversion
                        Vision.Image.Contour
                        Vision.Image.Grey
                        Vision.Image.Grey.Specialize
                        Vision.Image.Grey.Type
                        Vision.Image.Filter
                        Vision.Image.Filter.Internal
                        Vision.Image.HSV
                        Vision.Image.HSV.Specialize
                        Vision.Image.HSV.Type
                        Vision.Image.Interpolate
                        Vision.Image.Mutable
                        Vision.Image.Parallel
                        Vision.Image.RGBA
                        Vision.Image.RGBA.Specialize
                        Vision.Image.RGBA.Type
                        Vision.Image.RGB
                        Vision.Image.RGB.Specialize
                        Vision.Image.RGB.Type
                        Vision.Image.Threshold
                        Vision.Image.Transform
                        Vision.Image.Type
                        Vision.Primitive
                        Vision.Primitive.Shape

    ghc-options:        -Wall -O2
    hs-source-dirs:     src/
    default-language:   Haskell2010

    build-depends:      base                    >= 4.8          && < 5
                      , containers              >= 0.4          && < 0.7.0.0
                      , convertible             >= 1            && < 2
                      , deepseq                 >= 1.3          && < 2
                      , primitive               >= 0.5.2.1      && < 0.9
                      , ratio-int               >= 0.1.2        && < 0.2
                      , vector                  >= 0.10.0.1     && < 1
                      , transformers            >= 0.3          && < 0.7

Test-Suite      test
    type:       exitcode-stdio-1.0

    main-is:            Test.hs
    other-modules:      Test.Vision.Histogram
                        Test.Vision.Image
                        Test.Vision.Primitive
                        Test.Utils
    ghc-options:        -Wall -O2 -rtsopts
    hs-source-dirs:     test/
    default-language:   Haskell2010

    build-depends:      base                         >= 4            && < 5
                      , QuickCheck                   >= 2.6          && < 3
                      , friday
                      , test-framework               >= 0.8          && < 0.9
                      , test-framework-quickcheck2   >= 0.3.0.2      && < 0.4
                      , vector                       >= 0.10.0.1     && < 1
