name:              repa-image
version:           0.0.0
license:           GPL-3
author:            Raphael Javaux
maintainer:        Raphael Javaux
synopsis:          Image transformations on repa-based arrays.
description:       Image transformations on repa-based arrays.
category:          Machine Vision
stability:         Experimental
cabal-version:     >= 1.9.2
build-type:        Simple
--homepage:          http://github.org/

library
    exposed-modules:    Data.RatioInt
                        Vision.Image
                        Vision.Image.Class
                        Vision.Image.Function
                        Vision.Image.GreyImage
                        Vision.Image.GreyImage.Type
                        Vision.Image.GreyImage.Conversion
                        Vision.Image.GreyImage.Storage
                        Vision.Image.Interpolate
                        Vision.Image.RGBAImage
                        Vision.Image.RGBAImage.Type
                        Vision.Image.RGBAImage.Conversion
                        Vision.Image.RGBAImage.Storage
                        Vision.Image.RGBImage
                        Vision.Image.RGBImage.Type
                        Vision.Image.RGBImage.Conversion
                        Vision.Image.RGBImage.Storage
                        Vision.Image.Primitive
                        Vision.Image.Storage
                        Vision.Image.Transform

    ghc-options:        -Wall -O2 -fllvm -threaded
    hs-source-dirs:     src/

    build-depends: base                          >= 4           && < 5
                 , convertible                   >= 1           && < 2
                 , repa                          >= 3.2         && < 4
                 , repa-devil                    >= 0.3         && < 1.0
                 , vector                        >= 0.10.0.1    && < 1.0

Benchmark benchmark
    type:               exitcode-stdio-1.0

    main-is:            Benchmark.hs
    ghc-options:        -Wall -O2 -fllvm -threaded -rtsopts
    hs-source-dirs:     bench/

    build-depends: base                         >= 4            && < 5
                 , criterion                    >= 0.8          && < 1.0
                 , repa-image